Enhancement on existing page , Add Project in header menu, Updated team,

--- a/Ruralreformers/Views/Home/Donate.cshtml
+++ b/Ruralreformers/Views/Home/Donate.cshtml
@@ -5,7 +5,7 @@
         For individual donors
         <ol>
             <li>For Indian Donors – <a target="_blank" href="https://pages.razorpay.com/De4THl">https://pages.razorpay.com/De4THl</a></li>
-            <li>For International Donors –</li>
+            <li>For International Donors – <a target="_blank" href="https://fundraisers.giveindia.org/projects/support-mini-srp">https://fundraisers.giveindia.org/projects/support-mini-srp</a></li>
         </ol>
         </li>
     </ol>
