--- a/Ruralreformers/Views/Home/OurTeam.cshtml
+++ b/Ruralreformers/Views/Home/OurTeam.cshtml
@@ -1,6 +1,14 @@
 ﻿<div class="container">
     <h3>Our Team</h3>
     <div class="row">
+        <div class="col-sm-3 offset-0">
+            <a href="https://www.linkedin.com/in/karthick-kumar-16060116/" target="_blank">
+                <img style="width:200px;height: 200px;" src="~/Images/kharthik.jpeg" />
+                <p>Karthick Kumar (Advisor)</p>
+            </a>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-3">
             <a href="http://www.linkedin.com/in/Parthadasin" target="_blank">
                 <img src="~/Images/parth.jpeg" style="width:200px;height:200px;" />
@@ -30,12 +38,6 @@
             <a href="https://www.linkedin.com/in/priyanka-kumari-438561a6" target="_blank">
                 <img style="width:200px;height: 200px;" src="~/Images/priyankaKumari.jpeg" />
                 <p>Priyanka Kumari</p>
-            </a>
-        </div>
-        <div class="col-sm-3 offset-0">
-            <a href="https://www.linkedin.com/in/karthick-kumar-16060116/" target="_blank">
-                <img style="width:200px;height: 200px;" src="~/Images/kharthik.jpeg" />
-                <p>Karthick Kumar</p>
             </a>
         </div>
     </div>
