feature: Updated header, Donate page, added slider

--- a/Ruralreformers/Views/Home/Donate.cshtml
+++ b/Ruralreformers/Views/Home/Donate.cshtml
@@ -1,12 +1,43 @@
-﻿<div class="container">
-    <ol>
-        <li>For corporates</li>
-        <li>
-        For individual donors
-        <ol>
-            <li>For Indian Donors – <a target="_blank" href="https://pages.razorpay.com/De4THl">https://pages.razorpay.com/De4THl</a></li>
-            <li>For International Donors – <a target="_blank" href="https://fundraisers.giveindia.org/projects/support-mini-srp">https://fundraisers.giveindia.org/projects/support-mini-srp</a></li>
-        </ol>
-        </li>
-    </ol>
-</div>
+﻿     <div class="home-page-welcome">
+         <div class="blurbackground">
+           <div class="container">
+            <h4 style="margin-top:50px;"><strong class="donate-now">Donate Now</strong></h4>
+            </div>
+         </div>
+     </div>
+      <div class="container">
+                 <ol>
+                     <li>For corporates</li>
+                     <li>
+                        For individual donors
+                  <ol>
+                    <li>For Indian Donors – <a target="_blank" href="https://pages.razorpay.com/De4THl">https://pages.razorpay.com/De4THl</a></li>
+                    <li>For International Donors – <a target="_blank" href="https://fundraisers.giveindia.org/projects/support-mini-srp">https://fundraisers.giveindia.org/projects/support-mini-srp</a></li>
+                 </ol>
+                    </li>
+                </ol>
+      </div>
+<style>
+    .top-left {
+    position: absolute;
+}
+
+.home-page-welcome {
+        position: relative;
+        background: url(../images/image1.jpeg) no-repeat center;
+        background-size: cover !important;
+        z-index: 99;
+    }
+    .blurbackground {
+        background: #343a40bd;
+        backdrop-filter: blur(0px);
+        padding: 10px;
+        font-size: 18px;
+        height: 250px;
+    }
+    .donate-now {
+        color: white;
+        font-size: 30px;
+        border-bottom: 5px solid #ffc107;
+    }
+</style>
