--- a/Ruralreformers/Views/Home/Index.cshtml
+++ b/Ruralreformers/Views/Home/Index.cshtml
@@ -9,6 +9,27 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <div>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" style="max-height:400px;">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="~/images/image1.jpeg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="~/images/image2.jpeg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="~/images/image3.jpeg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
      <div class="home-page-welcome">
          <div class="blurbackground">
         <div class="container">
@@ -19,7 +40,7 @@
             As a start, we are focusing on Rural Karnataka to help children with disabilities to be a part of the main stream education and have equal employment opportunities.
         </p>
         </div>
-         </div>
+       </div>
       </div>
     <div class="container">
         <p><strong>Our Vision</strong></p>
@@ -72,8 +93,8 @@
         <p>Hence, Mini-SRPs are planned to address the 3 key challenges of our Rural India. Let’s make the difference we want to see. </p>
     </div>
 
-    <div class="container">
-        <iframe width="1100" height="400" src="https://www.youtube.com/embed/J2bn0uBTVbA" title="YouTube video player"
+    <div class="container video-wrapper">
+        <iframe src="https://www.youtube.com/embed/J2bn0uBTVbA" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br />
     </div>
@@ -89,6 +110,21 @@
 </script>
 
 <style>
+    .video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+.video-wrapper object,
+.video-wrapper embed,
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
     .carousel-inner img {
         width: 100%;
         height: 100%;
@@ -97,7 +133,7 @@
     .home-page-welcome {
         position: relative;
         background: url(images/image1.jpeg) no-repeat center;
-        background-size: cover;
+        background-size: cover !important;
         z-index: 99;
     }
     .blurbackground {
