--- a/Ruralreformers/Views/Home/OurTeam.cshtml
+++ b/Ruralreformers/Views/Home/OurTeam.cshtml
@@ -4,7 +4,7 @@
         <div class="col-sm-3 offset-0">
             <a href="https://www.linkedin.com/in/karthick-kumar-16060116/" target="_blank">
                 <img style="width:200px;height: 200px;" src="~/Images/kharthik.jpeg" />
-                <p>Karthick Kumar (Advisor)</p>
+                <p>Karthick Kumar</p>
             </a>
         </div>
     </div>
