--- a/Ruralreformers/Views/Home/Donate.cshtml
+++ b/Ruralreformers/Views/Home/Donate.cshtml
@@ -16,6 +16,9 @@
                  </ol>
                     </li>
                 </ol>
+                <p>
+                    <strong>The funds donated are exempted under Section 80G (for Indian Donors) under Income Tax Act.</strong>
+                </p>
       </div>
 <style>
     .top-left {
@@ -24,7 +27,7 @@
 
 .home-page-welcome {
         position: relative;
-        background: url(../images/image1.jpeg) no-repeat center;
+        background: url(../images/donate.jpeg) no-repeat center;
         background-size: cover !important;
         z-index: 99;
     }
