--- a/Ruralreformers/Views/Shared/_Layout.cshtml
+++ b/Ruralreformers/Views/Shared/_Layout.cshtml
@@ -24,22 +24,22 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <ul class="navbar-nav flex-grow-1 header-text-color">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="donate">Donate</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="our-team">Our Team</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="join-as-volunteer">Join us to volunteer</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="our-project">Project</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="contact-us">Contact Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="faq">Faq</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="join-as-volunteer">Join us to volunteer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="our-team">Our Team</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="donate">Donate</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="our-project">Project</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="faq">FAQ</a>
                             </li>
                         </ul>
                     </div>
