--- a/Ruralreformers/Views/Home/Index.cshtml
+++ b/Ruralreformers/Views/Home/Index.cshtml
@@ -15,10 +15,13 @@
       <img class="d-block w-100" src="~/images/image1.jpeg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="~/images/image2.jpeg" alt="Second slide">
+      <img class="d-block w-100" src="~/images/home6.jpeg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="~/images/image3.jpeg" alt="Third slide">
+      <img class="d-block w-100" src="~/images/home7.jpeg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="~/images/homepage5.jpeg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
