Home page content update.

--- a/Ruralreformers/Views/Home/Index.cshtml
+++ b/Ruralreformers/Views/Home/Index.cshtml
@@ -47,14 +47,18 @@
       </div>
     <div class="container">
         <p><strong>Our Vision</strong></p>
-        <p>Education for every Child in India</p>
-        <p><strong>Our Mision</strong></p>
+        <p>Education for every child in India</p>
+        <p><strong>Our Mission</strong></p>
         <p>Enabling basic education for every child in Rural Karnataka by 2027</p>
 
-        <p>Current Challenges in our Villages.</p>
+        <p>Current challenges in our villages.</p>
         <ul>
-            <li><strong>Accessibility to quality education:</strong> It is difficult for children with special needs to cope with regular education and tend to drop out from the mainstream education system</li>
-            <li><strong>Low Literacy Ratio:  </strong>Adult literacy in the villages is very low </li>
+            <li>
+                <strong>Accessibility to quality education:</strong>
+                It is difficult for children with special needs to cope with regular education and tend to drop out from the mainstream education system
+            </li>
+            <li><strong>Low Literacy Ratio:  </strong>
+            Adult literacy in the villages is very low </li>
             <li><strong>No access to good Healthcare:  </strong>People in the villages do not have access to good doctors/healthcare options</li>
         </ul>
 
@@ -62,10 +66,10 @@
             <strong>What we are doing?</strong>
         </p>
         <p>
-            We want to Change Rural India for better. We are taking small steps for that big change.
+            We want to change rural India for better. We are taking small steps for that big change.
         </p>
         <p>
-            We would like to make <strong>small but meaningful changes</strong> in villages of Karnataka.  We want to help children with disabilities to be part of the main stream education and have employment opportunities
+            We would like to make <strong>small but meaningful changes</strong> in villages of Karnataka. We want to help children with disabilities to be part of the mainstream education and have employment opportunities.
         </p>
         <p>
             Approximately 1% of the Karnataka population consist of children with special needs. This aggregates to a whopping 5 lakh children and out of this, the survey indicates that only 1% of the children with special needs go to school and complete secondary education. Rest 99% of the children with special needs never attend school and remain illiterate thus leading to increased dependency on others for livelihood. Our aim is to ensure the remaining 99% children also get the basic training and become ready to go to a mainstream school
@@ -82,7 +86,9 @@
         <p>How Rural Reformers is helping?</p>
         <ol>
             <li><p>Support existing SRPs in Hubli-Dharward, Karnataka which is at the verge of closure because of lack of funds</p></li>
-            <li><p>Start a pilot of two Mini-School Readiness Program Centers (Mini SRPs) in rural Karnataka which will cater to the Children with special needs who otherwise find the SRPs centers far away from their villages and cannot travel due to mobility issues.</p></li>
+            <li><p>
+            Start a pilot of two Mini-School Readiness Program Centers (Mini SRPs) in rural Karnataka which will cater to the children with special needs who otherwise find the SRPs centers far away from their villages and cannot travel due to mobility issues.
+            </p></li>
         </ol>
         <p><strong>What is Mini-SRP centers</strong></p>
         <p>This is an innovative approach which the Rural Reformers has come out with the help of FWF.</p>
