donate header added

--- a/Ruralreformers/Views/Shared/_Layout.cshtml
+++ b/Ruralreformers/Views/Shared/_Layout.cshtml
@@ -11,6 +11,19 @@
 </head>
 <body>
     <div class="app">
+        <header style="position:inherit;">
+            <nav class="navbar navbar-light bg-white border-bottom box-shadow mb-3" style=" background-color: coral !important; margin-bottom: 0px !important; ">
+
+                <div class="row" style="width:100%;">
+                    <div class="col-sm-9"></div>
+                    <div class="col-sm-3">
+                        <button class="btn btn-dark" style="color: white; background-color: #211f1e; font-family: 'Segoe UI';padding:0px;height:40px;">
+                            <a class="nav-link" asp-area="" asp-controller="rural-reformers" asp-action="donate" style="color: white !important;">Donate Now</a>
+                        </button>
+                    </div>
+                </div>
+            </nav>
+        </header>
         <header style="position: inherit; font-family:Segoe UI !important;">
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style=" background-color: #1e90ff !important; margin-bottom: 0px !important; ">
                 <div class="container">
